--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,74 +1,81 @@
-body   {
+body {
     font-family: 'Montserrat',
-    sans-serif;
-        background-color: #E5E5E5;
+        sans-serif;
+    background-color: #E5E5E5;
 }
 
-ul  {
+ul {
     padding: 0;
     margin: 0;
 }
 
 /* main styles */
 
-.main   {
+
+.main {
     display: flex;
+    justify-content: center;
     flex-direction: row-reverse;
     width: 1200px;
     margin: 0 auto;
 
 }
 
+@media screen and (max-width: 600px) {
+    .main {
+        display: block;
+        width: 599px;
+    }
+}
+
 /* main-content */
 
-.main-content   {
-background-color: #FFFFFF;
-box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
-padding: 65px 50px;
+.main-content {
+    background-color: #FFFFFF;
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+    padding: 65px 50px;
 
 }
 
 
 /* about styles */
 
-.about  {
-   margin-bottom: 40px; 
+.about {
+    margin-bottom: 25px;
 }
 
 .about-position {
-font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 17px;
-color: #000000;
-margin-bottom: 20px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+    margin-bottom: 20px;
 }
 
 .about-name {
-font-style: normal;
-font-weight: 700;
-font-size: 45px;
-line-height: 55px;
-color: #000000;
-margin-bottom: 25px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 55px;
+    color: #000000;
+    margin-bottom: 25px;
 }
 
-.about-description  {
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-color: #595959;
-width: 400px;
+.about-description {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #595959;
+    width: 400px;
 }
 
 /* project styles */
 
-.projects   {
-  margin-bottom: 50px;  
-}
 
-.title  {
+
+.title {
     font-style: normal;
     font-weight: 700;
     font-size: 22px;
@@ -77,7 +84,7 @@ width: 400px;
     margin-bottom: 10px;
 }
 
-.project-list   {
+.project-list {
     padding: 0;
     list-style: none;
 }
@@ -93,11 +100,11 @@ width: 400px;
 
 /* work styles */
 
-.work   {
-  margin-bottom: 45px;  
+.work {
+    margin-bottom: 45px;
 }
 
-.work-position  {
+.work-position {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
@@ -107,7 +114,7 @@ width: 400px;
     margin-bottom: 10px;
 }
 
-.organization   {
+.organization {
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -124,7 +131,7 @@ width: 400px;
     margin-bottom: 10px;
 }
 
-.line   {
+.line {
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -132,7 +139,7 @@ width: 400px;
     color: #000000;
 }
 
-.work-list  {
+.work-list {
     padding: 0;
     margin-left: 15px;
 }
@@ -147,11 +154,11 @@ width: 400px;
 
 /* education styles */
 
-.education  {
-  margin-top: 45px;  
+.education {
+    margin-top: 25px;
 }
 
-.name-university    {
+.name-university {
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -160,40 +167,48 @@ width: 400px;
     margin-bottom: 10px;
 }
 
-.managment  {
+.managment {
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
     line-height: 17px;
     color: #000000;
     margin-bottom: 10px;
+    margin-top: 0;
 }
 
 /* sidebar styles */
 
-.sidebar    {
+.sidebar {
     background-color: #1E2939;
     padding-top: 0px;
     width: 370px;
-    
+
 }
 
-.photo  {
+@media screen and (max-width: 600px) {
+    .sidebar {
+        padding-top: 10px;
+        width: 599px;
+    }
+}
+
+.photo {
     width: 370px;
     margin-bottom: 50px;
 }
 
 .contacts,
 .tech-skills,
-.soft-skills   {
+.soft-skills {
     margin-left: 40px;
 }
 
-.contacts   {
+.contacts {
     margin-bottom: 50px;
 }
 
-.sidebar-title  {
+.sidebar-title {
     color: #FFFFFF;
     font-style: normal;
     font-weight: 700;
@@ -202,7 +217,7 @@ width: 400px;
     margin-bottom: 10px;
 }
 
-.contact-type   {
+.contact-type {
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
@@ -211,7 +226,7 @@ width: 400px;
     margin-right: 5px;
 }
 
-.contact-link   {
+.contact-link {
     text-decoration: none;
     font-style: normal;
     font-weight: 400;
@@ -227,7 +242,7 @@ width: 400px;
     list-style: none;
 }
 
-.media-item > a {
+.media-item>a {
     text-decoration: none;
     font-style: normal;
     font-weight: 700;
@@ -248,10 +263,10 @@ width: 400px;
     font-size: 14px;
     line-height: 24px;
     color: #ffffff;
-    
+
 }
 
-.media-item:not(:last-child)    {
+.media-item:not(:last-child) {
     margin-bottom: 10px;
 }
 
@@ -263,18 +278,18 @@ width: 400px;
     transform: rotate(360deg);
 }
 
-.tech-skills-list    {
-color: #FFFFFF;
-padding: 0;
-margin-left: 17px;
+.tech-skills-list {
+    color: #FFFFFF;
+    padding: 0;
+    margin-left: 17px;
 
 }
 
-.tech-skills-item   {
+.tech-skills-item {
     color: #FB6D3A;
 }
 
-.tech-skills-tex    {
+.tech-skills-tex {
     color: #FFFFFF;
     font-style: normal;
     font-weight: 400;
@@ -282,27 +297,24 @@ margin-left: 17px;
     line-height: 24px;
 }
 
-.tech-skills    {
+.tech-skills {
     margin-bottom: 45px;
 }
 
-.soft-skills-list   {
-color: #FFFFFF;
-padding: 0;
-margin-left: 17px;
+.soft-skills-list {
+    color: #FFFFFF;
+    padding: 0;
+    margin-left: 17px;
 }
 
-.soft-skills-item   {
+.soft-skills-item {
     color: #FB6D3A;
 }
 
-.soft-skills-tex    {
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-color: #FFFFFF;
+.soft-skills-tex {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #FFFFFF;
 }
-
-
-
